# tryCoq

./: .gitignore  README.md  asdf  asdf.ml  asdf.txt  backup  bug_case  cclemma-result.csv  collect.py  detail.py  dilemma.opam  dune-project  exam.ml  filter_ast.txt  filter_input  graph.dot  ground_truth  have_to.txt  input  natadd.ml  natadd_ast.txt  new_test  problema13.sol  runner.py  sh-script.py  ta3_prev.txt  test_clam  test_dilemma  test_exam  test_input  test_input_copy  test_lambda  test_opt  to_prove.ml  todo.txt  tryCoq.opam
.github/workflows/: test-benchmark.yml
input/: natadd_input
lib/: dune  egraph.ml  engine.ml  finder.ml  ir.ml  library.ml  parser.ml  printer.ml  proof.ml  prover.ml  utils.ml  validate.ml
prerequisites/: axiom  definition.ml
primitive_type/: std_lib.ml
summary/: summary_clam.md  summary_dilemma-bench-handshaking.md  summary_dilemma-bench.md  summary_isaplanner.md  summary_optimization.md
test/: dune
