(lang dune 3.17)

(name dilemma)

(generate_opam_files true)

(source
 (github kupl/dilemma))

(authors "Mingyu Jo")

(maintainers "Mingyu Jo")

(license LICENSE)

(documentation https://github.com/kupl/dilemma)

(package
 (name dilemma)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
